# Github-RAG

./: .env.example  .gitignore  requirements.txt
.devcontainer/: devcontainer.json
.github/instructions/: day1.md
.github/workflows/: app-tests.yml
aihero/course/: data_loading.py  main.py  pyproject.toml
aihero/course/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.py
aihero/course/agents/: agent.py
aihero/course/app/: CI_CD.md  README.md  TESTING.md  pyproject.toml  requirements.txt  streamlit_app.py
aihero/course/app/logs/: gh_agent_20260328_012147_5deb27.json  gh_agent_20260328_020646_c9d761.json
aihero/course/app/tests/: test_ingest.py  test_logs.py  test_search_tools.py
aihero/course/chunking/: __init__.py  intelligent_chunking.py  paragraph_chunking.py  simple_chunking.py
aihero/course/chunking/.ipynb_checkpoints/: intelligent_chunking-checkpoint.py
aihero/course/evals/: data_generator_agent.py  evals.py
aihero/course/evals/logs/: faq_agent_V2_20260326_065942_12bf24.json  faq_agent_V2_20260326_065946_7fff42.json  faq_agent_V2_20260326_065952_a4a5c0.json  faq_agent_V2_20260326_065958_3176e0.json  (+16 more)
aihero/course/logs/: faq_agent_20260326_060340_1960f2.json  faq_agent_V2_20260326_061213_30a322.json  faq_agent_V2_20260326_064006_1e3000.json  faq_agent_V2_20260326_073822_ce22a5.json  faq_agent_V2_20260326_074934_fb9c68.json  faq_agent_V2_20260326_082006_ac1ad1.json  faq_agent_V2_20260326_083153_ee1c75.json
aihero/course/search/: __init__.py  hybrid_search.py  lexical_search.py  search.py  vector_search.py
